# Handheld_CTR_Control_ROS_WS

./: .gitignore  CMakeLists.txt  README.md  plotjuggler - CTR.xml
Input_Files/: Helix.csv  Targets.csv  Targets_old.csv  phantomTargets.csv  plannedPath_LowerPole.csv  plannedPath_MidPole.csv
Output_Files/: 3Dplotter.py  Helix_good2.csv  Plotter_II.py  Square_good.csv  output.csv  plot_error.py  plotter.py
Output_Files/2024-08-27_15-11-38/: errors.csv
Output_Files/2024-08-27_15-45-39/: errors.csv
Output_Files/2024-08-27_16-44-16/: errors.csv
Output_Files/2024-08-27_16-52-21/: errors.csv
Output_Files/Log/EMTracker/: Recordings.csv
Output_Files/Log/Robot/: 2023-11-06_10-29-41.txt  2023-11-06_10-34-53.txt  2023-11-06_10-36-30.txt  2023-11-06_10-39-47.txt  2023-11-06_10-47-49.txt  2023-11-06_10-47-56.txt  2023-11-06_10-53-27.txt  2023-11-06_11-01-13.txt  2023-11-06_11-12-50.txt  2023-11-06_11-30-18.txt  2023-11-06_11-51-26.txt  2023-11-06_12-05-15.txt  2023-11-06_12-07-43.txt  2023-11-06_12-09-42.txt  2023-11-06_12-11-34.txt  2023-11-06_12-27-22.txt  2023-11-06_13-04-57.txt  2023-11-06_13-06-39.txt  2023-11-06_13-15-26.txt  2023-11-06_14-30-30.txt  2023-11-07_15-54-52.txt  2023-11-07_15-55-00.txt  2023-11-07_16-01-39.txt  2023-11-07_16-58-55.txt  2023-11-07_16-59-27.txt  2023-11-07_17-23-42.txt  2023-11-07_17-23-48.txt  2023-11-07_18-28-05.txt  2023-11-07_18-29-01.txt  2023-11-07_18-29-33.txt  2023-11-07_19-00-37.txt  2023-11-07_19-06-59.txt  2023-11-07_19-18-07.txt  2023-11-07_19-24-20.txt  2023-11-07_19-32-08.txt  2023-11-07_19-32-14.txt  2023-11-07_19-34-54.txt  2023-11-07_19-43-25.txt  2023-11-07_20-04-24.txt  2023-11-07_20-04-53.txt  (+280 more)
Output_Files/path_data/: plannedPath.csv
Trajectories/: Helix.csv  Hypocycloid.csv  PCNL.csv  Square.csv  jointValues.csv
ctr_library/: CMakeLists.txt
ctr_library/include/: CTR.hpp  Segment.hpp  mathOperations.hpp
ctr_library/src/: CTR.cpp  ODESystem.cpp  Tube.cpp
executable/: CMakeLists.txt  Main.cpp  Main_BACKUP.cpp
lib_emtracker/config/: 610029_ctrref.rom  610059_ctrref.rom  config.yaml
lib_emtracker/include/: EMTracker.hpp
lib_emtracker/src/: EMTracker.cpp  KalmanFilter.cpp
lib_emtracker_old/: CMakeLists.txt
lib_keyinput/: CMakeLists.txt
lib_keyinput/include/: keyboardInput.hpp
lib_keyinput/src/: keyboardInput.cpp
lib_robot/: CMakeLists.txt
lib_robot/config/: 605.0141.01-L.eds  master.yml
lib_robot/include/: Robot.hpp
lib_robot/src/: CiA301node.cpp  Robot.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/Clinical_Data/Phantom/: Pyramids.csv  Skin.csv  Stone_01.stl  Stone_02.stl  Targets.csv  TargetsAllStones.csv  renalCalyces.csv
src/controller/ctr_library/: CMakeLists.txt  CMakeLists_BACKUP.txt
src/controller/ctr_library/include/: CTR.hpp  Observer.hpp  collisionCheck.hpp  mathOperations.hpp  openIGTLink.hpp
src/controller/ctr_library/src/: CTR.cpp  Segment.cpp  collisionCheck.cpp
src/controller/launch/: launch.py
src/controller/old_ctr_library/: CMakeLists.txt  CMakeLists_original.txt
src/controller/old_ctr_library/include/: CTR.hpp  ODESystem.hpp  Segment.hpp  mathOperations.hpp
src/controller/old_ctr_library/src/: CTR.cpp  Observer.cpp  Tube.cpp  openIGTLink.cpp
src/controller/src/: controller_node.cpp
src/emtracker/: CMakeLists.txt  README.md  package.xml
src/emtracker/launch/: launch.py
src/emtracker/lib_emtracker/: CMakeLists.txt
src/emtracker/lib_emtracker/config/: 610029_20150724_EOL.rom  610029_phantom2ct.csv  610094_robot2base.csv  config.yaml  landmarks_truth_ctr_robot_v3.5.csv  measured_landmarks.csv  registration_results.csv
src/emtracker/lib_emtracker/include/: Butterworth.hpp  EMTracker.hpp  RigidTransformation.hpp
src/emtracker/lib_emtracker/ndi_api/src/: CombinedApi.cpp
src/emtracker/lib_emtracker/src/: EMTracker.cpp  RigidTransformation.cpp
src/emtracker/src/: EMtracker_node.cpp
src/igtlink_bridge/: CMakeLists.txt  package.xml
src/igtlink_bridge/launch/: launch.py
src/igtlink_bridge/src/: igtl_bridge_node.cpp
src/interfaces/: CMakeLists.txt
src/interfaces/action/: Jointstarget.action  (+1 more)
src/manager/: CMakeLists.txt  package.xml
src/manager/launch/: launch.py
src/manager/src/: manager_node.cpp  recorder_node.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/ctr_library/include/: CTR.hpp  Observer.hpp  mathOperations.hpp
src/planner/ctr_library/src/: CTR.cpp
src/planner/launch/: launch.py
src/planner/motion_planning/: CMakeLists.txt
src/planner/motion_planning/include/: CTR_BackboneLengthObjective.hpp  CTR_ClearanceObjective.hpp  CTR_DiscreteMotionValidator.hpp  CTR_RevoluteJointObjective.hpp  CTR_StateSampler.hpp  CTR_StateValidityChecker.hpp  Planner.hpp
src/planner/motion_planning/src/: CTR_BackboneLengthObjective.cpp  CTR_ClearanceObjective.cpp  CTR_DiscreteMotionValidator.cpp  CTR_RevoluteJointObjective.cpp  CTR_StateSampler.cpp  CTR_StateValidityChecker.cpp  Planner.cpp
src/planner/old_ctr_library/: CMakeLists.txt
src/planner/old_ctr_library/src/: Tube.cpp
src/planner/old_motion_planning/: CMakeLists.txt
src/planner/old_motion_planning/include/: CTR_BackboneLengthObjective.hpp  CTR_DiscreteMotionValidator.hpp  CTR_StateSampler.hpp  CTR_StateValidityChecker.hpp  Planner.hpp
src/planner/old_motion_planning/src/: CTR_BackboneLengthObjective.cpp  CTR_DiscreteMotionValidator.cpp  CTR_StateSampler.cpp  CTR_StateValidityChecker.cpp  Planner.cpp
src/planner/src/: planner_node.cpp
src/publisher/: CMakeLists.txt  package.xml
src/robot/: CMakeLists.txt  package.xml
src/robot/ctr_library/include/: Tube.hpp  boostBlazeAlgebra.hpp
src/robot/ctr_library/src/: CTR.cpp  ODESystem.cpp  Observer.cpp  Segment.cpp
src/robot/launch/: launch.py
src/robot/lib_robot/: CMakeLists.txt
src/robot/lib_robot/config/: 605.0141.01-L.eds  master.yml
src/robot/lib_robot/include/: CanEssentials.hpp  CiA301node.hpp  Robot.hpp
src/robot/lib_robot/src/: CiA301node.cpp  Robot.cpp
src/robot/src/: fk_node.cpp  keyboard_node.cpp  qt_node.cpp  robot_node.cpp
src/target_manager/: CMakeLists.txt  package.xml
(+23 files in other folders)
